CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT(SoundArtist CXX)
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR};${CMAKE_MODULE_PATH}")

IF(WIN32)
    SET(CMAKE_FIND_LIBRARY_SUFFIXES .lib .a ${CMAKE_FIND_LIBRARY_SUFFIXES})
ELSE(WIN32)
    SET(CMAKE_FIND_LIBRARY_SUFFIXES .a ${CMAKE_FIND_LIBRARY_SUFFIXES})
ENDIF(WIN32)


FIND_PACKAGE(wxWidgets COMPONENTS core base adv propgrid REQUIRED)
FIND_PACKAGE(sndfile REQUIRED)
FIND_PACKAGE(fftw REQUIRED)
INCLUDE( ${wxWidgets_USE_FILE} )
INCLUDE_DIRECTORIES (${FFTW_INCLUDE_DIR} ${SNDFILE_INCLUDE_DIR})
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
SET(SRCS soundartist.cpp wavread.cpp SoundArtistGUI.cpp SoundArtistMainWindow.cpp)

ADD_EXECUTABLE(soundartist ${SRCS} ) 
TARGET_LINK_LIBRARIES(soundartist ${wxWidgets_LIBRARIES} ${SNDFILE_LIBRARY} ${FFTW_LIBRARIES})

IF(APPLE)
	SET(BUNDLE_LOCATION SoundArtist.app)
ADD_CUSTOM_COMMAND(TARGET soundartist POST_BUILD
	COMMAND rm -rf ${BUNDLE_LOCATION}
	COMMAND cp -r SoundArtist.app.template ${BUNDLE_LOCATION}
	COMMAND mkdir ${BUNDLE_LOCATION}/Contents/MacOS
	COMMAND cp soundartist ${BUNDLE_LOCATION}/Contents/MacOS/Sound\ Artist
    DEPENDS soundartist)
ENDIF(APPLE)

